--- a/index.html
+++ b/index.html
@@ -315,56 +315,46 @@
                            onclick="return confirm('010-2243-0481로 전화를 거시겠습니까?')"
                            class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
 
-                        <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 
-                                    group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                            <!-- 새 전화 아이콘 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                      d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 011.21-.502l4.493 1.498a1 1 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
-                            </svg>
-                        </div>
+                            <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
+                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 011.21-.502l4.493 1.498a1 1 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
+                                    </path>
+                                </svg>
+                            </div>
 
-                        <div class="md:text-left text-center">
-                            <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Quick Call</p>
+                            <div class="md:text-left text-center">
+                                <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">
+                                    Quick Call
+                            </p>
                             <p class="text-2xl font-bold">010-2243-0481</p>
                         </div>
+
                         </a>
 
                         <!-- Email -->
                         <div class="flex flex-col md:flex-row items-center gap-6 group">
-                        <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 
-                                    group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                            <!-- 새 이메일 아이콘 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                      d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-                            </svg>
+                            <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
+                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                            </div>
+                            <div class="md:text-left text-center">
+                                <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Send Email</p>
+                                <p class="text-2xl font-bold break-all">sungboo1211@naver.com</p>
+                            </div>
                         </div>
-
-                        <div class="md:text-left text-center">
-                            <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Send Email</p>
-                            <p class="text-2xl font-bold break-all">sungboo1211@naver.com</p>
-                        </div>
-                        </div>
-
                         <!-- Address -->
                         <div class="flex flex-col md:flex-row items-center gap-6 group">
-                        <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 
-                                    group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                            <!-- 새 위치 아이콘 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                      d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.243-4.243a8 8 0 1111.314 0z"/>
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                      d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
-                            </svg>
+                            <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
+                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                            </div>
+                            <div class="md:text-left text-center">
+                                <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Office</p>
+                                <p class="text-2xl font-bold">경기 고양시 덕양구 보광로 179-18</p>
+                            </div>
                         </div>
+                    </div>
+                </div>
 
-                        <div class="md:text-left text-center">
-                            <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Office</p>
-                            <p class="text-2xl font-bold">경기 고양시 덕양구 보광로 179-18</p>
-                </div>
-                </div>
 
                 <!-- Form Side -->
                 <div class="bg-white p-12 rounded-[3.5rem] border border-gray-100 shadow-2xl relative w-full">
@@ -519,6 +509,7 @@
     </script>
 </body>
 </html>
+
 
 
 
