--- a/index.html
+++ b/index.html
@@ -483,10 +483,8 @@
     <script>
 document.addEventListener('DOMContentLoaded', () => {
     const maxCardsPerCategory = 6;
-    const minCardsPerCategory = 3;
-
-    // 모든 카드 가져오기
     const cards = Array.from(document.querySelectorAll('.project-item'));
+    const filterButtons = document.querySelectorAll('.filter-btn');
 
     // 카테고리별로 그룹핑
     const categories = {};
@@ -496,52 +494,50 @@ document.addEventListener('DOMContentLoaded', () => {
         categories[category].push(card);
     });
 
-    // 카테고리별 카드 표시 제한 적용
-    Object.keys(categories).forEach(category => {
-        const catCards = categories[category];
-        catCards.forEach((card, index) => {
-            if (index >= maxCardsPerCategory) {
-                card.style.display = 'none'; // 최대 개수 초과 카드 숨김
-            } else {
-                card.style.display = 'block'; // 나머지 보이게
-            }
+    // 카드 표시 함수
+    function showCards(filteredCategory = '전체') {
+        cards.forEach(card => {
+            card.style.opacity = 0;
+            card.style.display = 'none';
+        });
+
+        Object.keys(categories).forEach(category => {
+            if (filteredCategory !== '전체' && category !== filteredCategory) return;
+
+            const catCards = categories[category];
+            catCards.forEach((card, index) => {
+                if (index < maxCardsPerCategory) {
+                    card.style.display = 'block';
+                    setTimeout(() => card.style.opacity = 1, 10); // fade in
+                }
+            });
+        });
+    }
+
+    // 초기 로드 시 모든 카테고리 적용
+    showCards();
+
+    // 필터 버튼 이벤트
+    filterButtons.forEach(button => {
+        button.addEventListener('click', () => {
+            const filter = button.dataset.filter;
+
+            // 버튼 스타일 초기화
+            filterButtons.forEach(btn => {
+                btn.classList.remove('bg-gold', 'text-white');
+                btn.classList.add('text-gray-400', 'border', 'border-gray-200');
+            });
+
+            // 활성 버튼 스타일
+            button.classList.add('bg-gold', 'text-white');
+            button.classList.remove('text-gray-400');
+
+            // 카드 표시
+            showCards(filter);
         });
     });
-
-    // 만약 특정 카테고리에 카드가 minCardsPerCategory보다 적으면 그냥 있는 것만 보여줌
 });
 </script>
-    <script>
-      const filterButtons = document.querySelectorAll('.filter-btn');
-      const projects = document.querySelectorAll('.project-item');
-
-      filterButtons.forEach(button => {
-        button.addEventListener('click', () => {
-          const filter = button.dataset.filter;
-
-          // 버튼 스타일 초기화
-          filterButtons.forEach(btn => {
-            btn.classList.remove('bg-gold', 'text-white');
-            btn.classList.add('text-gray-400', 'border', 'border-gray-200');
-          });
-
-          // 활성 버튼 스타일
-          button.classList.add('bg-gold', 'text-white');
-          button.classList.remove('text-gray-400');
-
-          // 프로젝트 필터링 with fade
-          projects.forEach(project => {
-            if (filter === '전체' || project.dataset.category === filter) {
-              project.style.display = 'block';
-              setTimeout(() => project.style.opacity = 1, 10); // fade in
-            } else {
-              project.style.opacity = 0; // fade out
-              setTimeout(() => project.style.display = 'none', 300); // match duration
-            }
-          });
-        });
-      });
-    </script>
 </section>
    <!-- More Projects Button -->
 <div class="text-center mt-12">
@@ -761,6 +757,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
