--- a/index.html
+++ b/index.html
@@ -478,67 +478,60 @@
             </div>
         </div>
     </div>
-
-    <!-- JS for Filter with Fade Animation and Max 6 Cards per Category -->
-<script>
+    <script>
 document.addEventListener('DOMContentLoaded', () => {
-    const maxCardsPerCategory = 6;
-    const cards = Array.from(document.querySelectorAll('.project-item'));
-    const filterButtons = document.querySelectorAll('.filter-btn');
+  const maxCardsPerCategory = 6;
+  const filterButtons = document.querySelectorAll('.filter-btn');
+  const grid = document.querySelector('.grid'); // Projects Grid
+  const allCards = Array.from(document.querySelectorAll('.project-item'));
 
-    // 카테고리별로 그룹핑
-    const categories = {};
-    cards.forEach(card => {
-        const category = card.dataset.category;
-        if (!categories[category]) categories[category] = [];
-        categories[category].push(card);
+  // 카테고리별 카드 그룹 생성
+  const categories = {};
+  allCards.forEach(card => {
+    const category = card.dataset.category;
+    if (!categories[category]) categories[category] = [];
+    categories[category].push(card);
+  });
+
+  // 카드 표시 함수: grid 안에 넣어주기
+  function showCards(filteredCategory = '전체') {
+    grid.innerHTML = ''; // grid 초기화
+
+    Object.keys(categories).forEach(category => {
+      if (filteredCategory !== '전체' && category !== filteredCategory) return;
+
+      const catCards = categories[category].slice(0, maxCardsPerCategory); // 최대 6개
+      catCards.forEach(card => {
+        grid.appendChild(card); // grid 안에 카드 추가
+        card.style.opacity = 0;
+        card.style.display = 'block';
+        setTimeout(() => card.style.opacity = 1, 10); // fade-in
+      });
     });
+  }
 
-    // 카드 표시 함수
-    function showCards(filteredCategory = '전체') {
-        // 먼저 모든 카드 숨기고 opacity 초기화
-        cards.forEach(card => {
-            card.style.opacity = 0;
-            card.style.display = 'none';
-        });
+  // 초기 로드 시 전체 카드 표시
+  showCards();
 
-        // 각 카테고리별로 표시
-        Object.keys(categories).forEach(category => {
-            if (filteredCategory !== '전체' && category !== filteredCategory) return;
+  // 필터 버튼 클릭 이벤트
+  filterButtons.forEach(button => {
+    button.addEventListener('click', () => {
+      const filter = button.dataset.filter;
 
-            const catCards = categories[category];
-            catCards.forEach((card, index) => {
-                if (index < maxCardsPerCategory) {
-                    card.style.display = 'block';
-                    // fade-in
-                    setTimeout(() => card.style.opacity = 1, 10);
-                }
-            });
-        });
-    }
+      // 버튼 스타일 초기화
+      filterButtons.forEach(btn => {
+        btn.classList.remove('bg-gold', 'text-white');
+        btn.classList.add('text-gray-400', 'border', 'border-gray-200');
+      });
 
-    // 초기 로드 시 모든 카테고리 적용
-    showCards();
+      // 활성 버튼 스타일
+      button.classList.add('bg-gold', 'text-white');
+      button.classList.remove('text-gray-400');
 
-    // 필터 버튼 이벤트
-    filterButtons.forEach(button => {
-        button.addEventListener('click', () => {
-            const filter = button.dataset.filter;
-
-            // 버튼 스타일 초기화
-            filterButtons.forEach(btn => {
-                btn.classList.remove('bg-gold', 'text-white');
-                btn.classList.add('text-gray-400', 'border', 'border-gray-200');
-            });
-
-            // 활성 버튼 스타일 적용
-            button.classList.add('bg-gold', 'text-white');
-            button.classList.remove('text-gray-400');
-
-            // 카드 표시
-            showCards(filter);
-        });
+      // 카드 표시
+      showCards(filter);
     });
+  });
 });
 </script>
 </section>
@@ -760,6 +753,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
