--- a/index.html
+++ b/index.html
@@ -520,8 +520,7 @@
                            class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
 
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                </svg>
+                                <img src="images/전화아이콘.png" alt="전화 아이콘" class="w-7 h-7">
                             </div>
 
                             <div class="md:text-left text-center">
@@ -536,7 +535,7 @@
                         <!-- Email -->
                         <div class="flex flex-col md:flex-row items-center gap-6 group">
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                                <img src="images/메일아이콘.png" alt="이메일 아이콘" class="w-7 h-7">
                             </div>
                             <div class="md:text-left text-center">
                                 <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Send Email</p>
@@ -546,7 +545,7 @@
                         <!-- Address -->
                         <div class="flex flex-col md:flex-row items-center gap-6 group">
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                                <img src="images/지도아이콘.png" alt="지도 아이콘" class="w-7 h-7">
                             </div>
                             <div class="md:text-left text-center">
                                 <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Office</p>
@@ -721,6 +720,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
